--- a/1A2B-vue.html
+++ b/1A2B-vue.html
@@ -171,12 +171,8 @@
 										顯示答案（測試）
 									</button>
 								</div>
-								<div
-									id="result"
-									class="alert alert-info mt-3 mb-0"
-									role="alert"
-								>
-									請開始猜！
+								<div class="mt-3 mb-0" :class="'alert-' + resultType">
+									{{resultText}}
 								</div>
 							</div>
 						</div>
@@ -187,10 +183,13 @@
 							<div class="card-body d-flex flex-column">
 								<h2 class="h5 text-secondary mb-3">歷程紀錄</h2>
 								<ul
-									id="history"
 									class="list-group flex-grow-1"
 									style="max-height: 420px; overflow-y: auto"
-								></ul>
+								>
+									<li v-for="(item, index) in history" class="list-group-item">
+										第{{index + 1}} 次: {{item.guess}} -> {{item.result}}
+									</li>
+								</ul>
 								<div class="mt-3 small text-muted">
 									顯示每次猜測的結果（格式：第 N 次：猜測 → 幾 A 幾 B）。
 								</div>
@@ -220,7 +219,8 @@
 						const guess = this.guess.trim();
 
 						if (!isValidGuess(guess)) {
-							setResult("❌ 請輸入4位不重複的數字！", "danger");
+							this.resultText = "❌ 請輸入4位不重複的數字！";
+							this.resultType = "danger";
 							return;
 						}
 						// attempts++;
@@ -236,24 +236,21 @@
 						this.history.push({ guess, result });
 
 						if (result === "4A0B") {
-							setResult(`🎉 恭喜答對！共猜了 ${attempts} 次！`, "success");
-							alert(`答對了！答案是 ${answer}\n總共猜了 ${attempts} 次。`);
+							this.resultText = `🎉 恭喜答對！共猜了 ${this.attempts} 次！`;
+							this.resultType = "success";
 						} else {
-							setResult(`結果：${result}`, "secondary");
+							this.resultText = `結果：${result}`;
+							this.resultType = "secondary";
 						}
-
-						inputEl.value = "";
-						inputEl.focus();
-						updateKeypad();
 					},
 					startNewGame() {
 						this.answer = generateAnswer();
-						attempts = 0;
-						document.getElementById("history").innerHTML = "";
-						document.getElementById("result").textContent =
-							"已產生新題目，請開始猜！";
-						document.getElementById("guessInput").value = "";
-						console.log("DEBUG 答案:", answer); // 可移除
+						this.attempts = 0;
+						this.history = [];
+						this.guess = "";
+						this.resultText = "請開始猜";
+						this.resultType = "info";
+						console.log("DEBUG 答案:", this.answer); // 可移除
 					},
 				},
 				mounted() {
@@ -306,21 +303,21 @@
 			}
 
 			// 更新數字鍵盤可用狀態
-			function updateKeypad() {
-				const inputEl = document.getElementById("guessInput");
-				const val = inputEl.value;
-				const len = val.length;
-				document.querySelectorAll("#keypad [data-digit]").forEach((btn) => {
-					const d = btn.getAttribute("data-digit");
-					btn.disabled = val.includes(d) || len >= 4;
-				});
-			}
+			// function updateKeypad() {
+			// 	const inputEl = document.getElementById("guessInput");
+			// 	const val = inputEl.value;
+			// 	const len = val.length;
+			// 	document.querySelectorAll("#keypad [data-digit]").forEach((btn) => {
+			// 		const d = btn.getAttribute("data-digit");
+			// 		btn.disabled = val.includes(d) || len >= 4;
+			// 	});
+			// }
 
-			function setResult(message, type = "info") {
-				const resultEl = document.getElementById("result");
-				resultEl.textContent = message;
-				resultEl.className = `alert alert-${type} mt-3 mb-0`;
-			}
+			// function setResult(message, type = "info") {
+			// 	const resultEl = document.getElementById("result");
+			// 	resultEl.textContent = message;
+			// 	resultEl.className = `alert alert-${type} mt-3 mb-0`;
+			// }
 
 			// function doGuess() {
 			// 	const inputEl = document.getElementById("guessInput");
@@ -352,72 +349,72 @@
 			// }
 
 			// 猜按鈕事件
-			document.getElementById("btnGuess").addEventListener("click", doGuess);
+			// document.getElementById("btnGuess").addEventListener("click", doGuess);
 
 			// 輸入框 Enter 也可觸發
-			document
-				.getElementById("guessInput")
-				.addEventListener("keydown", function (e) {
-					if (e.key === "Enter") {
-						doGuess();
-					}
-				});
+			// document
+			// 	.getElementById("guessInput")
+			// 	.addEventListener("keydown", function (e) {
+			// 		if (e.key === "Enter") {
+			// 			doGuess();
+			// 		}
+			// 	});
 
-			// 輸入框內容變更時，同步更新鍵盤狀態（僅保留數字，限制長度）
-			document
-				.getElementById("guessInput")
-				.addEventListener("input", function () {
-					const digitsOnly = this.value.replace(/[^\d]/g, "");
-					this.value = digitsOnly.slice(0, 4);
-					updateKeypad();
-				});
+			// // 輸入框內容變更時，同步更新鍵盤狀態（僅保留數字，限制長度）
+			// document
+			// 	.getElementById("guessInput")
+			// 	.addEventListener("input", function () {
+			// 		const digitsOnly = this.value.replace(/[^\d]/g, "");
+			// 		this.value = digitsOnly.slice(0, 4);
+			// 		updateKeypad();
+			// 	});
 
-			// 重新開始按鈕
-			document
-				.getElementById("btnRestart")
-				.addEventListener("click", startNewGame);
+			// // 重新開始按鈕
+			// document
+			// 	.getElementById("btnRestart")
+			// 	.addEventListener("click", startNewGame);
 
-			// 顯示答案按鈕（測試用）
-			document
-				.getElementById("btnShowAnswer")
-				.addEventListener("click", function () {
-					alert(`目前的答案是：${answer}`);
-				});
+			// // 顯示答案按鈕（測試用）
+			// document
+			// 	.getElementById("btnShowAnswer")
+			// 	.addEventListener("click", function () {
+			// 		alert(`目前的答案是：${answer}`);
+			// 	});
 
-			// 數字鍵盤事件委派
-			document.getElementById("keypad").addEventListener("click", function (e) {
-				const btn = e.target.closest("button[data-digit]");
-				if (!btn) return;
-				const inputEl = document.getElementById("guessInput");
-				const val = inputEl.value;
-				const d = btn.getAttribute("data-digit");
-				if (val.length >= 4 || val.includes(d)) return;
-				inputEl.value = val + d;
-				updateKeypad();
-				inputEl.focus();
-			});
+			// // 數字鍵盤事件委派
+			// document.getElementById("keypad").addEventListener("click", function (e) {
+			// 	const btn = e.target.closest("button[data-digit]");
+			// 	if (!btn) return;
+			// 	const inputEl = document.getElementById("guessInput");
+			// 	const val = inputEl.value;
+			// 	const d = btn.getAttribute("data-digit");
+			// 	if (val.length >= 4 || val.includes(d)) return;
+			// 	inputEl.value = val + d;
+			// 	updateKeypad();
+			// 	inputEl.focus();
+			// });
 
-			// 退格與清除
-			document
-				.getElementById("btnBackspace")
-				.addEventListener("click", function () {
-					const inputEl = document.getElementById("guessInput");
-					inputEl.value = inputEl.value.slice(0, -1);
-					updateKeypad();
-					inputEl.focus();
-				});
-			document
-				.getElementById("btnClear")
-				.addEventListener("click", function () {
-					const inputEl = document.getElementById("guessInput");
-					inputEl.value = "";
-					updateKeypad();
-					inputEl.focus();
-				});
+			// // 退格與清除
+			// document
+			// 	.getElementById("btnBackspace")
+			// 	.addEventListener("click", function () {
+			// 		const inputEl = document.getElementById("guessInput");
+			// 		inputEl.value = inputEl.value.slice(0, -1);
+			// 		updateKeypad();
+			// 		inputEl.focus();
+			// 	});
+			// document
+			// 	.getElementById("btnClear")
+			// 	.addEventListener("click", function () {
+			// 		const inputEl = document.getElementById("guessInput");
+			// 		inputEl.value = "";
+			// 		updateKeypad();
+			// 		inputEl.focus();
+			// 	});
 
-			// 初始化遊戲
-			startNewGame();
-			updateKeypad();
+			// // 初始化遊戲
+			// startNewGame();
+			// updateKeypad();
 		</script>
 
 		<!-- Bootstrap JS (包含 Popper) -->
